po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 13:32+0000\n"
+"PO-Revision-Date: 2016-11-23 15:36+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -693,7 +693,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Automatically email invoice when user purchases online"
-msgstr "Automatski pošalji profakturu imejlom kada korisnik kupuje onlajn"
+msgstr "Automatski pošalji profakturu emailom kada korisnik kupuje onlajn"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
@@ -865,7 +865,7 @@ msgid ""
 "guard which facilitate compliance with the US CAN-SPAM Act. They should only"
 " be disabled if your organization adopts other mechanisms for compliance or "
 "if your organization is not subject to CAN-SPAM."
-msgstr "Ne proveravaj da li su prisutni obavezni tokeni (adresa domena, odjava/isključenje sa mejling liste) pre slanja mejlinga. UPOZORENJE: Obavezni tokeni su zaštita koja podržava poštovanje US CAN-SPAM akta. Tokeni mogu biti isključeni ukolko je vaša organizacija usvojila druge mehanizme ili ukoliko vaša organizacija ne podleže ovom zakonu/aktu."
+msgstr "Ne proveravaj da li su prisutni obavezni tokeni (adresa domena, odjava/isključenje sa mailing liste) pre slanja mailing-a. UPOZORENJE: Obavezni tokeni su zaštita koja podržava poštovanje US CAN-SPAM akta. Tokeni mogu biti isključeni ukolko je vaša organizacija usvojila druge mehanizme ili ukoliko vaša organizacija ne podleže ovom zakonu/aktu."
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "CiviMail dedupes e-mail addresses by default"
@@ -980,19 +980,19 @@ msgstr ""
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr "Pošalji imejl"
+msgstr "Pošalji email"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr "Snimi aktivnost za automatizovani imejl"
+msgstr "Snimi aktivnost za automatizovani email"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
-msgstr "Pošalji imejl ili SMS"
+msgstr "Pošalji email ili SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email or SMS"
-msgstr "Snimi aktivnost za automatizovani imejl ili SMS"
+msgstr "Snimi aktivnost za automatizovani email ili SMS"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send as"
@@ -1392,7 +1392,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Email"
-msgstr "Uključi imejl"
+msgstr "Uključi email"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Nickname"
@@ -1420,7 +1420,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "mail()"
-msgstr "mejl()"
+msgstr "mail()"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "SMTP"
@@ -1440,7 +1440,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Select Mailer"
-msgstr "Odaberi mejler"
+msgstr "Odaberi mailer"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Settings - Outbound Mail"
@@ -1481,11 +1481,11 @@ msgstr "Sačuvaj i pošalji test mejl"
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
 "You have selected \"Disable Outbound Email\". A test email can not be sent."
-msgstr "Izabrali ste opciju \"Isključi odlazne imejlove\". Test imejl ne može biti poslat. "
+msgstr "Izabrali ste opciju \"Isključi odlazne mailove\". Test email ne može biti poslat. "
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Email Disabled"
-msgstr "Imejl isključen"
+msgstr "Email isključen"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "You have selected \"Redirect to Database\". A test email can not be sent."
@@ -1499,25 +1499,25 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sending test email. FROM: %1 TO: %2.<br />"
-msgstr "Slanje test imejla. OD: %1 do %2.<br />"
+msgstr "Slanje test emaila. OD: %1 do %2.<br />"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid ""
 "Your %1 settings are correct. A test email has been sent to your email "
 "address."
-msgstr "Vaša podešavanja za %1 su tačna. Test imejl je poslat na vašu imejl adresu."
+msgstr "Vaša podešavanja za %1 su tačna. Test email je poslat na vašu email adresu."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Sent"
-msgstr "Mejl poslat"
+msgstr "Mail poslat"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Oops. Your %1 settings are incorrect. No test mail has been sent."
-msgstr "Ups. Vaša podešavanja za %1 nisu tačna. Test imejl nije poslat."
+msgstr "Ups. Vaša podešavanja za %1 nisu tačna. Test email nije poslat."
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Not Sent"
-msgstr "Mejl nije poslat"
+msgstr "Mail nije poslat"
 
 #: CRM/Admin/Form/Setting/UF.php
 msgid "Settings - %1 Integration"
@@ -1943,7 +1943,7 @@ msgstr "Obriši format oznake"
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Mailing Label"
-msgstr "Format mejlinga"
+msgstr "Format mailinga"
 
 #: CRM/Admin/Page/LabelFormats.php
 msgid "Name Badge"
@@ -1967,11 +1967,11 @@ msgstr "Obriši tip lokacije"
 
 #: CRM/Admin/Page/MailSettings.php
 msgid "Edit Mail Settings"
-msgstr "Uredi podešavanja za mejl"
+msgstr "Uredi podešavanja za mail"
 
 #: CRM/Admin/Page/MailSettings.php
 msgid "Delete Mail Settings"
-msgstr "Obriši podešavanja za mejl"
+msgstr "Obriši podešavanja za mail"
 
 #: CRM/Admin/Page/Mapping.php
 msgid "Are you sure you want to delete this mapping?"
@@ -2499,7 +2499,7 @@ msgstr "UPOZORENJE: NE koristite razmak u imenu lokacije."
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid ""
 "WARNING: Deleting this option will result in the loss of mail settings data."
-msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka podataka o podešavanjima mejla"
+msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka podataka o podešavanjima maila"
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Name of this group of settings."
@@ -2507,7 +2507,7 @@ msgstr "Ime ove grupe podešavanja."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Name or IP address of mail server machine."
-msgstr "Ime ili IP adresa mejl servera."
+msgstr "Ime ili IP adresa mail servera."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Username to use when polling (for IMAP and POP3)."
@@ -2525,7 +2525,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Email address domain (the part after @)."
-msgstr "Domen imejl adrese (deo posle @)."
+msgstr "Domen email adrese (deo posle @)."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Contents of the Return-Path header."
@@ -2592,7 +2592,7 @@ msgstr "Tokeni mogu biti uključeni (%1)."
 msgid ""
 "An HTML formatted version of this message will be sent to contacts whose "
 "Email Format preference is 'HTML' or 'Both'."
-msgstr "HTML verzija ove poruke biće poslata svim kontaktima kojima je odabrani format mejlova 'HTML' ili 'Oba'."
+msgstr "HTML verzija ove poruke biće poslata svim kontaktima kojima je odabrani format mailova 'HTML' ili 'Oba'."
 
 #: templates/CRM/Admin/Form/MessageTemplates.tpl
 msgid "Text formatted message."
@@ -3220,7 +3220,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
-msgstr "Imejl ekran"
+msgstr "Email ekran"
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "SMS Screen"
@@ -3703,7 +3703,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid "CiviMail Mailer Settings and Optimization"
-msgstr "Podešavanja i optimizacija CiviMail mejlera "
+msgstr "Podešavanja i optimizacija CiviMail mailera"
 
 #: templates/CRM/Admin/Form/Setting/Mapping.hlp
 msgid ""
@@ -3824,7 +3824,7 @@ msgstr ""
 msgid ""
 "Maximum number of files (documents, images, etc.) which can attached to "
 "emails or activities."
-msgstr "Maksimalan broj fajlova (dokumenata, slika, itd) koji mogu biti u prilogu mejlova i aktivnosti."
+msgstr "Maksimalan broj fajlova (dokumenata, slika, itd) koji mogu biti u prilogu mailova i aktivnosti."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -4029,7 +4029,7 @@ msgstr "Unesite ime SMTP servera, kao što je \"smtp.example.com\". Ukoliko serv
 msgid ""
 "The most common SMTP port possibilities are 25, 465, and 587.  Check with "
 "your mail provider for the appropriate one."
-msgstr "Najčešća podešavanja SMTP porta su 25, 465 i 587. Proverite sa vašim mejl provajderom koji je odgovarajući."
+msgstr "Najčešća podešavanja SMTP porta su 25, 465 i 587. Proverite sa vašim mail provajderom koji je odgovarajući."
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid "Does your SMTP server require authentication (user name + password)?"
@@ -4609,7 +4609,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr "Da li ste registrovali ovaj sajt na CiviCRM.org? Ako ne, pomozite da ojačamo CiviCRM ekosistem tako što ćete izdvojiti par minuta da <a %1> popunite formular za registraciju</a>. Prikupljene informacije će nam pomoći da uskladimo poboljšanja prema prioritetima, obezbedimo fokus za komunikaciju i izgradimo zajednicu. Ukoliko ste član tehničkog osoblja koje održava ovaj sajt, kliknite na Keep in Touch kako biste redovno dobijali najažurnije tehničke podatke (mala mejling lista). "
+msgstr "Da li ste registrovali ovaj sajt na CiviCRM.org? Ako ne, pomozite da ojačamo CiviCRM ekosistem tako što ćete izdvojiti par minuta da <a %1> popunite formular za registraciju</a>. Prikupljene informacije će nam pomoći da uskladimo poboljšanja prema prioritetima, obezbedimo fokus za komunikaciju i izgradimo zajednicu. Ukoliko ste član tehničkog osoblja koje održava ovaj sajt, kliknite na Keep in Touch kako biste redovno dobijali najažurnije tehničke podatke (mala mailing lista). "
 
 #: templates/CRM/Admin/Page/Admin.tpl
 msgid "plus sign"
@@ -5131,7 +5131,7 @@ msgstr ""
 msgid ""
 "You can configure one or more Label Formats for your CiviCRM installation. "
 "Label Formats are used when creating mailing labels."
-msgstr "Možete podesiti jedan ili više formata oznaka u vašoj CiviCRM instalaciji. Formati oznaka se koriste kada se kreiraju oznake za mejling."
+msgstr "Možete podesiti jedan ili više formata oznaka u vašoj CiviCRM instalaciji. Formati oznaka se koriste kada se kreiraju oznake za mailing."
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid "Used for"
@@ -5168,7 +5168,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Add Mail Account"
-msgstr "Dodaj mejl nalog"
+msgstr "Dodaj Mail nalog"
 
 #: templates/CRM/Admin/Page/Mapping.tpl
 msgid ""
