--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 14:30+0000\n"
+"PO-Revision-Date: 2016-11-23 14:51+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -419,7 +419,7 @@ msgstr "Generiši izveštaj"
 
 #: CRM/Case/Form/Search.php
 msgid "Client Name or Email"
-msgstr "Ime klijenta ili imejl adresa"
+msgstr "Ime klijenta ili email adresa"
 
 #: CRM/Case/Form/Search.php templates/CRM/Case/Page/DashBoard.tpl
 msgid "Find Cases"
