po: update po/sr_RS@latin/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/install.po
+++ b/po/sr_RS@latin/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 15:46+0000\n"
+"PO-Revision-Date: 2016-11-23 14:51+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -411,7 +411,7 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr "Da li ste registrovali ovaj sajt na CiviCRM.org? Ako ne, pomozite da ojačamo CiviCRM ekosistem tako što ćete izdvojiti par minuta da <a %1> popunite formular za registraciju</a>. Prikupljene informacije će nam pomoći da uskladimo poboljšanja prema prioritetima, obezbedimo fokus za komunikaciju i izgradimo zajednicu. Ukoliko ste član tehničkog osoblja koje održava ovaj sajt, kliknite na Keep in Touch kako biste redovno dobijali najažurnije tehničke podatke (mala mejling lista). "
+msgstr "Da li ste registrovali ovaj sajt na CiviCRM.org? Ako ne, pomozite da ojačamo CiviCRM ekosistem tako što ćete izdvojiti par minuta da <a %1> popunite formular za registraciju</a>. Prikupljene informacije će nam pomoći da uskladimo poboljšanja prema prioritetima, obezbedimo fokus za komunikaciju i izgradimo zajednicu. Ukoliko ste član tehničkog osoblja koje održava ovaj sajt, kliknite na Keep in Touch kako biste redovno dobijali najažurnije tehničke podatke (mala mailing lista). "
 
 #: install/index.php
 msgid ""
