--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,8 +42,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 11:51+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-11-23 13:09+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14436,7 +14436,7 @@ msgstr "Si está usando el componente de CiviMail para enviar correos a los cont
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Opt Out"
-msgstr "Opción de salida"
+msgstr "Darse de baja"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
