--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 13:40+0000\n"
+"PO-Revision-Date: 2016-11-23 15:55+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -166,11 +166,11 @@ msgstr "Tip valute"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Thank-you sent?"
-msgstr ""
+msgstr "Zahvalnica poslata?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Receipt sent?"
-msgstr ""
+msgstr "Priznanica poslata?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is Pay Later?"
@@ -358,19 +358,19 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt From email"
-msgstr ""
+msgstr "Priznanica iz emaila"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt cc"
-msgstr ""
+msgstr "Priznanica cc"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt bcc"
-msgstr ""
+msgstr "Priznanica bcc"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt Text"
-msgstr ""
+msgstr "Priznanica tekst"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Page Active?"
