po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 11:19+0000\n"
+"PO-Revision-Date: 2016-11-23 14:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send email to a non-existent contact: %1"
-msgstr ""
+msgstr "CiviMail neće poslati email nepostojećem kontaktu: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
@@ -43,11 +43,11 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "You do not have permission to access this mailing report"
-msgstr "Nemate dozvolu za pristup ovom mejling izveštaju."
+msgstr "Nemate dozvolu za pristup ovom mailing izveštaju."
 
 #: CRM/Mailing/BAO/Mailing.php CRM/Mailing/BAO/MailingAB.php
 msgid "Selected mailing has been deleted."
-msgstr "Odabrani mejling je obrisan."
+msgstr "Odabrani mailing je obrisan."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "SMS Message"
@@ -81,7 +81,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "View Mailing"
-msgstr "Pogledaj mejling"
+msgstr "Pogledaj mailing"
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "[CiviMail Draft]"
@@ -89,7 +89,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "The mailing has been canceled."
-msgstr "Mejling je otkazan."
+msgstr "Mailing je otkazan."
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "Not scheduled"
@@ -122,7 +122,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing: "
-msgstr "Mejling:"
+msgstr "Mailing:"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/Selector/Event.php
 #: templates/CRM/Mailing/Page/Report.tpl
@@ -136,7 +136,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing Name(s)"
-msgstr "Ime(na) mejlinga"
+msgstr "Ime(na) mailing-a"
 
 #: CRM/Mailing/BAO/Query.php CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Status"
@@ -197,15 +197,15 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Domain"
-msgstr "Mejling domen"
+msgstr "Mailing domen"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Reply"
-msgstr "Mejling odgovor"
+msgstr "Mailing odgovor"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Unsubscribe"
-msgstr "Mejling odjava"
+msgstr "Mailing odjava"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Resubscribe"
@@ -217,7 +217,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Type"
-msgstr "Tip mejlinga"
+msgstr "Tip mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
@@ -254,7 +254,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
-msgstr "Mejling kompletiran"
+msgstr "Mailing kompletiran"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
@@ -584,11 +584,11 @@ msgstr ""
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward Mailing: %1"
-msgstr "Prosledi mejling: %1"
+msgstr "Prosledi mailing: %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Email %1"
-msgstr "Imejl %1"
+msgstr "Email %1"
 
 #: CRM/Mailing/Form/ForwardMailing.php
 msgid "Forward"
@@ -621,7 +621,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Group.php
 msgid "Remove duplicate emails?"
-msgstr "Ukloni duplikate imejlova?"
+msgstr "Ukloni duplikate emailova?"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Unsubscription Group"
@@ -652,7 +652,7 @@ msgstr ""
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Saved"
-msgstr "Mejling sačuvan"
+msgstr "Mailing sačuvan"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Cannot have same mail in Include mailing(s) and Exclude mailing(s)."
@@ -707,7 +707,7 @@ msgstr ""
 
 #: CRM/Mailing/Form/Schedule.php
 msgid "Schedule Mailing"
-msgstr "Zakaži mejling"
+msgstr "Zakaži mailing"
 
 #: CRM/Mailing/Form/Schedule.php ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -716,7 +716,7 @@ msgstr "Zakaži mejling"
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Submit Mailing"
-msgstr "Pošalji mejling"
+msgstr "Pošalji mailing"
 
 #: CRM/Mailing/Form/Schedule.php
 msgid ""
@@ -885,7 +885,7 @@ msgstr "Više informacija o obaveznim tokenima..."
 
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Content"
-msgstr "Sadržaj mejlinga"
+msgstr "Sadržaj mailinga"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
@@ -906,7 +906,7 @@ msgstr "obriši u CiviMail"
 #: CRM/Mailing/Info.php CRM/Mailing/Page/Browse.php
 #: CRM/Mailing/Selector/Browse.php
 msgid "Delete Mailing"
-msgstr "Obriši mejling"
+msgstr "Obriši mailing"
 
 #: CRM/Mailing/Info.php
 msgid "view public CiviMail content"
@@ -914,23 +914,23 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr "kreiraj mejling"
+msgstr "kreiraj mailing"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr "zakaži mejling"
+msgstr "zakaži mailing"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr "odobri mejling"
+msgstr "odobri mailing"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Cancel Mailing"
-msgstr "Otkaži mejling"
+msgstr "Otkaži mailing"
 
 #: CRM/Mailing/Page/Browse.php CRM/Mailing/Selector/Browse.php
 msgid "Archive Mailing"
-msgstr "Arhiviraj mejling"
+msgstr "Arhiviraj mailing"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Find Mass SMS"
@@ -938,7 +938,7 @@ msgstr "Pretraga Masovnih SMS-ova"
 
 #: CRM/Mailing/Page/Browse.php
 msgid "Search Mailings"
-msgstr "Pretraži mejling"
+msgstr "Pretraži mailing"
 
 #: CRM/Mailing/Page/Component.php templates/CRM/Mailing/Form/Component.tpl
 msgid "Edit Mailing Component"
@@ -958,7 +958,7 @@ msgstr "Nazad na aktivnosti"
 
 #: CRM/Mailing/Page/Event.php CRM/Mailing/Page/Report.php
 msgid "Back to Mailing"
-msgstr "Nazad u mejling"
+msgstr "Nazad u mailing"
 
 #: CRM/Mailing/Page/Event.php
 msgid "Back to Report"
@@ -978,7 +978,7 @@ msgstr "CiviMail izveštaj: %1"
 
 #: CRM/Mailing/Page/Tab.php
 msgid "Mailings sent to %1"
-msgstr "Mejling poslat %1"
+msgstr "Mailing poslat %1"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Draft"
@@ -1067,15 +1067,15 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to cancel this mailing?"
-msgstr "Da li ste sigurni da želite da otkažete ovaj mejling?"
+msgstr "Da li ste sigurni da želite da otkažete ovaj mailing?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to delete this mailing?"
-msgstr "Da li ste sigurni da želite da obrišete ovaj mejling?"
+msgstr "Da li ste sigurni da želite da obrišete ovaj mailing?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Are you sure you want to archive this mailing?"
-msgstr "Da li ste sigurni da želite da arhivirate ovaj mejling?"
+msgstr "Da li ste sigurni da želite da arhivirate ovaj mailing?"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject"
@@ -1091,7 +1091,7 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Continue Mailing"
-msgstr "Nastavi mejling"
+msgstr "Nastavi mailing"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Archive"
@@ -1107,7 +1107,7 @@ msgstr ""
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Forwarded Email"
-msgstr "Prosleđeni imejl"
+msgstr "Prosleđeni email"
 
 #: CRM/Mailing/Selector/Event.php ang/crmMailing/services.js
 #: templates/CRM/Mailing/Page/Report.tpl
@@ -1164,7 +1164,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr "Imejl adresa"
+msgstr "Emai adresa"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
@@ -1188,7 +1188,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
-msgstr "Test imejl"
+msgstr "Test email"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
@@ -1200,7 +1200,7 @@ msgstr "Pošalji test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr "Pošalji test imejl grupi:"
+msgstr "Pošalji test emai grupi:"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
@@ -1750,23 +1750,23 @@ msgstr "Novi A/B test"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing A"
-msgstr "Mejling A"
+msgstr "Mailing A"
 
 #: ang/crmMailingAB/ReportCtrl.js ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Mailing B"
-msgstr "Mejling B"
+msgstr "Mailing B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing A"
-msgstr "Test mejling A"
+msgstr "Test mailing A"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Test Mailing B"
-msgstr "Test mejling B"
+msgstr "Test mailing B"
 
 #: ang/crmMailingAB/Slider.html
 msgid "Final Mailing"
-msgstr "Konačni mejling"
+msgstr "Konačni mailing"
 
 #: ang/crmMailingAB/WinnerDialogCtrl.html
 msgid ""
@@ -1972,11 +1972,11 @@ msgstr ""
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Include Mailings"
-msgstr "Uključi mejlinge"
+msgstr "Uključi mailing-e"
 
 #: templates/CRM/Mailing/Form/Group.hlp
 msgid "Exclude Mailings"
-msgstr "Isključi mejlinge"
+msgstr "Isključi mailing-e"
 
 #: templates/CRM/Mailing/Form/Group.tpl
 msgid "Additional Mailing Recipients"
@@ -2038,12 +2038,12 @@ msgstr ""
 #: templates/CRM/Mailing/Form/Schedule.tpl
 msgid ""
 "Set a date and time when you want CiviMail to start sending this mailing."
-msgstr "Odaberite datum i vreme kada želite da CiviMail počne sa slanjem ovog mejlinga."
+msgstr "Odaberite datum i vreme kada želite da CiviMail počne sa slanjem ovog mailing-a."
 
 #: templates/CRM/Mailing/Form/Search/Common.tpl
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "Mailing Date"
-msgstr "Datum mejlinga"
+msgstr "Datum mailing-a"
 
 #: templates/CRM/Mailing/Form/Search.tpl
 msgid "SMS Date"
