po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-11-22 13:45+0000\n"
+"PO-Revision-Date: 2016-11-23 15:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -752,7 +752,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Do Not E-mail"
-msgstr "Ne šalji imejl"
+msgstr "Ne šalji email"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Does this contact not want to be emailed?"
@@ -768,7 +768,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Do Not Mail"
-msgstr "Ne šalji imejl"
+msgstr "Ne šalji email"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Does this contact not want to be mailed?"
@@ -933,11 +933,11 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Email"
-msgstr "CiviCRM imejl"
+msgstr "CiviCRM email"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Primary Email"
-msgstr "je primarna imejl adresa"
+msgstr "je primarna email adresa"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is this address the contact's primary email?"
@@ -953,7 +953,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Email Address"
-msgstr "Imejl adresa"
+msgstr "Email adresa"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Phone Details"
@@ -2030,15 +2030,15 @@ msgstr "Zakazan datum"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Mailing's Scheduled Date"
-msgstr "Zakazan datum mejlinga"
+msgstr "Zakazan datum mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Mailing's Start Date"
-msgstr "Datum početka mejlinga"
+msgstr "Datum početka mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Mailing's End Date"
-msgstr "Datum završetka mejlinga"
+msgstr "Datum završetka mailinga"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is Test?"
@@ -2046,7 +2046,7 @@ msgstr "Test?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Is this the test mailing?"
-msgstr "Da li je ovo test mejling?"
+msgstr "Da li je ovo test mailing?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Mailing Forwards"
@@ -2130,7 +2130,7 @@ msgstr "Datum dostave"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Date user e-mail delivered"
-msgstr "Datum kada je korisniku dostavljen imejl"
+msgstr "Datum kada je korisniku dostavljen email"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Mailing delivered ID"
@@ -2326,7 +2326,7 @@ msgstr "pregled"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_mailing_name.inc
 msgid "Mailing Name"
-msgstr "Naslov mejlinga"
+msgstr "Naslov mailinga"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Registration Page"
@@ -2742,19 +2742,19 @@ msgstr "Obrisan kontakt"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been created"
-msgstr "Mejling je kreiran"
+msgstr "Mailing je kreiran"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Created mailing"
-msgstr "Kreiran mejling"
+msgstr "Kreiran mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been updated"
-msgstr "Mejling je ažuriran"
+msgstr "Mailing je ažuriran"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Updated Mailing"
-msgstr "Ažuriran mejling"
+msgstr "Ažuriran mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing content has been uploaded"
@@ -2766,19 +2766,19 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been scheduled"
-msgstr "Mejling je zakazan"
+msgstr "Mailing je zakazan"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Scheduled mailing"
-msgstr "Zakazan mejling"
+msgstr "Zakazan mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been approved/rejected"
-msgstr "Mejling je odobren/odbijen"
+msgstr "Mailing je odobren/odbijen"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Approved mailing"
-msgstr "Odobreni mejling"
+msgstr "Odobreni mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Inform scheduler about the mailing"
@@ -2798,11 +2798,11 @@ msgstr ""
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing has been completed"
-msgstr "Mejling je završen"
+msgstr "Mailing je završen"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Completed mailing"
-msgstr "Završen mejling"
+msgstr "Završen mailing"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Add Contact to CiviCRM Group"
@@ -2822,17 +2822,17 @@ msgstr "Kontakt koji treba ukloniti iz grupe"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Send Email"
-msgstr "Pošalji imejl"
+msgstr "Pošalji emai"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Send an Email"
-msgstr "Pošalji imejl"
+msgstr "Pošalji emai"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid ""
 "Enter e-mail address of recipient. (Use a comma to separate multiple e-mail "
 "addresses.)"
-msgstr "Unesite imejl adresu primaoca. (Koristite zarez da odvojite više imejl adresa)"
+msgstr "Unesite email adresu primaoca. (Koristite zarez da odvojite više email adresa)"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Message Subject"
@@ -2860,7 +2860,7 @@ msgstr "Kontakt"
 
 #: drupal/modules/civicrm_rules/civicrm_rules.rules.inc
 msgid "Mailing"
-msgstr "Mejling"
+msgstr "Mailing"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/List.php
 msgid "Is one of"
@@ -2916,7 +2916,7 @@ msgstr ""
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Email"
-msgstr "Imejl"
+msgstr "Email"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Is Held"
