po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 13:39+0000\n"
+"PO-Revision-Date: 2016-11-23 14:56+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1176,7 +1176,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Accounts"
-msgstr "Imejl nalozi"
+msgstr "Mail nalozi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1214,15 +1214,15 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Mailing Report"
-msgstr "Mejling izveštaj"
+msgstr "Mailing izveštaj"
 
 msgctxt "menu"
 msgid "Forward Mailing"
-msgstr "Prosledi mejling"
+msgstr "Prosledi mailing"
 
 msgctxt "menu"
 msgid "Sending Mail"
-msgstr "Slanje mejlinga"
+msgstr "Slanje mailinga"
 
 msgctxt "menu"
 msgid "Mailing Event"
@@ -1230,15 +1230,15 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Schedule Mailing"
-msgstr "Zakaži mejling"
+msgstr "Zakaži mailing"
 
 msgctxt "menu"
 msgid "View Mailing"
-msgstr "Pogledaj mejling"
+msgstr "Pogledaj mailing"
 
 msgctxt "menu"
 msgid "Approve Mailing"
-msgstr "Odobri mejling"
+msgstr "Odobri mailing"
 
 msgctxt "menu"
 msgid "CiviMember Dashboard"
@@ -1457,7 +1457,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Archived Mailings"
-msgstr "Arhivirani mejling"
+msgstr "Arhivirani mailing"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1617,7 +1617,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Outbound Email (SMTP/Sendmail)"
-msgstr "Odlazni imejl (SMTP/Sendmail)"
+msgstr "Odlazni email (SMTP/Sendmail)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2128,7 +2128,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Details"
-msgstr "Detalji mejlinga"
+msgstr "Detalji mailing-a"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
