po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 13:35+0000\n"
+"PO-Revision-Date: 2016-11-23 14:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -867,7 +867,7 @@ msgstr ""
 
 #: CRM/Member/Form/Search.php
 msgid "Member Name or Email"
-msgstr "Ime ili imejl člana"
+msgstr "Ime ili email člana"
 
 #: CRM/Member/Form/Search.php
 msgid "Find Memberships"
@@ -1513,13 +1513,13 @@ msgstr ""
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Automatically email a membership confirmation and receipt to %1?"
-msgstr "Automatski pošalji imejl sa potvrdom članstva i priznanicom %1?"
+msgstr "Automatski pošalji email sa potvrdom članstva i priznanicom %1?"
 
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid ""
 "Enter a message you want included at the beginning of the emailed receipt. "
 "EXAMPLE: 'Thanks for supporting our organization with your membership.'"
-msgstr "Unesite poruku koju želite da pošaljete na početku imejla sa priznanicom. PRIMER: 'Hvala što podržavate našu organizaciju svojim članstvom.'"
+msgstr "Unesite poruku koju želite da pošaljete na početku emaila sa priznanicom. PRIMER: 'Hvala što podržavate našu organizaciju svojim članstvom.'"
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid "New Membership Status"
