--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-31 08:03+0000\n"
+"PO-Revision-Date: 2016-11-23 14:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -931,7 +931,7 @@ msgstr "Vidi učesnike za ovaj događaj"
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant E-mail"
-msgstr "Imejl učesnika"
+msgstr "Email učesnika"
 
 #: CRM/Report/Form/Event/ParticipantListCount.php
 msgid "Phone No"
@@ -1219,7 +1219,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Forwarded to Email"
-msgstr "Prosleđeno na imejl"
+msgstr "Prosleđeno na email"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Forwarded"
@@ -1385,7 +1385,7 @@ msgstr ""
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "email"
-msgstr "imejl"
+msgstr "emai"
 
 #: CRM/Report/Form/Pledge/Summary.php
 msgid "Aggregate Amount Pledged"
