--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-17 08:28+0000\n"
+"PO-Revision-Date: 2016-11-24 13:24+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2262,7 +2262,7 @@ msgstr ""
 #: CRM/Report/Form/Event/ParticipantListCount.php
 #: CRM/Report/Form/Event/Summary.php
 msgid "Total Income"
-msgstr ""
+msgstr "Ingressos totals"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Registered by Participant ID"
