--- a/po/ca_ES/menu.po
+++ b/po/ca_ES/menu.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 11:37+0000\n"
+"PO-Revision-Date: 2016-11-24 13:23+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2164,7 +2164,7 @@ msgstr "Mètodes de pagament"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Tanca el període comptable"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2173,7 +2173,7 @@ msgstr "Configurar el CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "Recursos CiviCRM"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2209,7 +2209,7 @@ msgstr "Extensions"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Els meus informes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
