po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 14:51+0000\n"
+"PO-Revision-Date: 2016-11-24 13:42+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgstr ""
 
 #: CRM/Case/BAO/Case.php
 msgid "File %1 does not exist or is not readable"
-msgstr ""
+msgstr "Fajl %1 ne postoji ili se ne može pročitati"
 
 #: CRM/Case/BAO/Case.php
 msgid "Invalid case ID ( %1 ) in TO: field."
@@ -135,23 +135,23 @@ msgstr "Aktivnost je automatski generisana %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Role in Case  %1 '%2'"
-msgstr ""
+msgstr "Uloga u predmetu %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Case Tags %1"
-msgstr ""
+msgstr "Tagovi predmeta %1"
 
 #: CRM/Case/BAO/Query.php
 msgid "Search All Cases"
-msgstr ""
+msgstr "Pretraži sve predmete"
 
 #: CRM/Case/BAO/Query.php
 msgid "Only My Cases"
-msgstr ""
+msgstr "Samo moji predmeti"
 
 #: CRM/Case/BAO/Query.php
 msgid "Deleted Cases"
-msgstr ""
+msgstr "Obrisani predmeti"
 
 #: CRM/Case/DAO/Case.php
 msgid "Case is in the Trash"
@@ -159,11 +159,11 @@ msgstr ""
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type ID"
-msgstr ""
+msgstr "ID tipa predmeta"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Name"
-msgstr ""
+msgstr "Ime tipa predmeta"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Title"
@@ -171,19 +171,19 @@ msgstr ""
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Description"
-msgstr ""
+msgstr "Opis tipa predmeta"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Active"
-msgstr ""
+msgstr "Tip predmeta je aktivan"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Is Reserved"
-msgstr ""
+msgstr "Tip predmeta je rezervisan"
 
 #: CRM/Case/DAO/CaseType.php
 msgid "Case Type Definition"
-msgstr ""
+msgstr "Definicija tipa predmeta"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
@@ -199,23 +199,23 @@ msgstr ""
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "New Start Date"
-msgstr ""
+msgstr "Novi datum početka"
 
 #: CRM/Case/Form/Activity/ChangeCaseStartDate.php
 msgid "Case Start Date changed successfully."
-msgstr ""
+msgstr "Datum početka predmeta je uspešno promenjen."
 
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
 msgid "Case status changed from %1 to %2"
-msgstr ""
+msgstr "Status predmeta je promenjen sa %1 na %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseStatus.php
 msgid "Case Status changed successfully."
-msgstr ""
+msgstr "Status predmeta je uspešno promenjen."
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php ang/crmCaseType/list.html
 msgid "New Case Type"
-msgstr ""
+msgstr "Novi tip predmeta"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Reset Case Timeline?"
@@ -223,27 +223,27 @@ msgstr ""
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Reset Start Date"
-msgstr ""
+msgstr "Resetuj datum početka"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case type changed from %1 to %2"
-msgstr ""
+msgstr "Tip predmeta promenjen sa %1 na %2"
 
 #: CRM/Case/Form/Activity/ChangeCaseType.php
 msgid "Case Type changed successfully."
-msgstr ""
+msgstr "Tip predmeta je uspešno promenjen."
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Link To Case"
-msgstr ""
+msgstr "Link ka Predmetu"
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Please select some other case to link."
-msgstr ""
+msgstr "Molimo izaberite druge predmete za linkovanje"
 
 #: CRM/Case/Form/Activity/LinkCases.php
 msgid "Selected case is already linked."
-msgstr ""
+msgstr "Odabrani predmet je već linkovan."
 
 #: CRM/Case/Form/Activity/OpenCase.php
 msgid "Case opened successfully."
@@ -328,11 +328,11 @@ msgstr ""
 
 #: CRM/Case/Form/Case.php
 msgid "Case Deleted"
-msgstr ""
+msgstr "Predmet obrisan"
 
 #: CRM/Case/Form/Case.php
 msgid "The selected case has been restored.<br />"
-msgstr ""
+msgstr "Odabrani predmet je povraćen. "
 
 #: CRM/Case/Form/CaseView.php
 msgid "Related Cases"
