--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -8,13 +8,14 @@
 # Julipan <stian@julipan.org>, 2011
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2016
+# Thomas Nilefalk <thomas.nilefalk@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-16 17:41+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-11-24 15:06+0000\n"
+"Last-Translator: Thomas Nilefalk <thomas.nilefalk@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1075,7 +1076,7 @@ msgstr "Den nya påminnelsen med titeln '%1' har sparats."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your Reminder titled %1 has been updated."
-msgstr ""
+msgstr "Din påminnelse med titlen %1 har uppdaterats."
 
 #: CRM/Admin/Form/Setting/Component.php
 msgid "Settings - Enable Components"
@@ -3221,7 +3222,7 @@ msgstr "Aktivera upprepning."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
-msgstr ""
+msgstr "Du kan skicka påminnelser till dessa mottagare automatiskt."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Email Screen"
@@ -6222,7 +6223,7 @@ msgstr "Relation från B till A"
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "Reminder For"
-msgstr ""
+msgstr "Påminnelse om"
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "While"
@@ -6234,7 +6235,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "No Scheduled Reminders have been created."
-msgstr ""
+msgstr "Inga schemalagda påminnelser har skapats."
 
 #: templates/CRM/Admin/Page/ScheduleReminders.hlp
 msgid ""
@@ -6294,7 +6295,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Lägg till påminnnelse"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
