--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 14:50+0000\n"
+"PO-Revision-Date: 2016-11-24 17:33+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -71,7 +71,7 @@ msgstr ""
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Your Letter"
-msgstr ""
+msgstr "Vaše pismo"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid ""
@@ -85,7 +85,7 @@ msgstr "Pogledaj mailing"
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "[CiviMail Draft]"
-msgstr ""
+msgstr "[CiviMail Draft]"
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "The mailing has been canceled."
@@ -93,7 +93,7 @@ msgstr "Mailing je otkazan."
 
 #: CRM/Mailing/BAO/MailingJob.php
 msgid "Not scheduled"
-msgstr ""
+msgstr "Nije zakazano"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Mailing Delivery"
