po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 15:36+0000\n"
+"PO-Revision-Date: 2016-11-24 11:57+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -121,7 +121,7 @@ msgstr "Ažuriranje ekstenzije nije uspelo"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
-msgstr ""
+msgstr "Menadžment - Zakazani poslovi"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Entity"
