--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -6,11 +6,11 @@
 # AlexHobbit <sysadmin@cdeacf.ca>, 2015
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 # samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012,2016
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 19:03+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-11-25 21:41+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2057,12 +2057,12 @@ msgstr "Paiement transféré"
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 #: CRM/Report/Form/Grant/Detail.php CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Report Due"
-msgstr "Rapport de la date d'échéance"
+msgstr "Rapport de subvention dû"
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Rationale"
-msgstr "Logique"
+msgstr "Raison"
 
 #: CRM/Grant/Form/Grant.php CRM/Grant/Form/Task/Update.php
 #: templates/CRM/Grant/Form/GrantView.tpl
